# skp2stl

./: CMakeLists.txt  README.md
apps/skp2stl-simple/: CMakeLists.txt  main.cc
inc/skp2stl/: stl_exporter.h
src/: stl_exporter.cc
